--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "desafio de devchallenges.io",
   "main": "src/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d src"
   },
   "repository": {
     "type": "git",
